--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -50,109 +50,110 @@
 
 
     <div  id="bbox" class="container-fluid">
-      <h1></h1>
+      <h1 class="non"> here</h1>
+      <h3> <p>Name: <input type="text" class="name1"></p> </h3>
 
 
     <div  id="box" class="grid-container" class="col-xl-12">
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">1</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">2</p></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">3</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">4</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="no" class="grid-item"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">5</p></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">5</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">6</p> </div>
-      <div class="no" class="grid-item"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">7</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">8</p> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">7</p></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">8</p></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">9</p> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">10</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">11</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">12</p> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">12</p></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">13</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">14</p></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="no" class="grid-item"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">15</p></div>
       <div class="no" class="grid-item"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">15</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">16</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">17</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">18</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="no" class="grid-item"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">17</p></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">18</p></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="no" class="grid-item"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">19</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="no" class="grid-item"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">20</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">21</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">22</p> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">20</p></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">21</p></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="no" class="grid-item"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
       <div class="no" class="grid-item"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">22</p></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">23</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">24</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">25</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">26</p> </div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">27</p> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">24</p></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">25</p></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="no" class="grid-item"></div>
-      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">28</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"> </div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="no" class="grid-item"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
+      <div class="no" class="grid-item"></div>
+      <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">27</p></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
     </div>
   </div>
